--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node ./dist/app.js",
-    "dev": "nodemon --exec ts-node ./src/app.ts"
+  "dev": "nodemon --exec ts-node ./src/app.ts",
+  "migrate": "ts-node ./src/db/migrate.ts"
   },
   "keywords": [],
   "author": "",
