--- a/backend/package.json
+++ b/backend/package.json
@@ -6,19 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node ./dist/app.js",
-  "dev": "nodemon --exec ts-node ./src/app.ts",
-  "migrate": "ts-node ./src/db/migrate.ts"
+    "dev": "nodemon --exec ts-node ./src/app.ts",
+    "migrate": "ts-node ./src/db/migrate.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "nodemon": "^3.1.11",
